2016sept22a: Initial debug of webapi web app for running statistical scripts on a virtual machine

--- a/src/DevTreksStatsApi/appsettings.json
+++ b/src/DevTreksStatsApi/appsettings.json
@@ -6,5 +6,15 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Debug": {
+    "DefaultRootWebStoragePath": "http://localhost:52958/"
+  },
+  "Release": {
+    "DefaultRootWebStoragePath": "http://localhost:5000/"
+  },
+  "Site": {
+    "RExecutable": "C:\\Program Files\\Microsoft\\MRO-3.3.1\\bin\\Rscript.exe",
+    "PyExecutable": "C:\\Anaconda3\\pythonw.exe"
   }
 }
