--- a/src/DevTreksStatsApi/project.json
+++ b/src/DevTreksStatsApi/project.json
@@ -46,7 +46,10 @@
       "wwwroot",
       "**/*.cshtml",
       "appsettings.json",
-      "web.config"
+      "web.config",
+      //localhost needs these
+      "project.json",
+      "project.lock.json"
     ]
   },
 
