2016sept23a: Version 2.0.2.beta1 of the DevTreksStatsApi web app documented in the Source Code tutorial.

--- a/.gitignore
+++ b/.gitignore
@@ -240,3 +240,15 @@ ModelManifest.xml
 
 # FAKE - F# Make
 .fake/
+/src/DevTreksStatsApi/wwwroot/resources/temp/e094cdd6-720a-4658-9e2c-60d0ad6908c3/Regress1out.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/e094cdd6-720a-4658-9e2c-60d0ad6908c3/Regress1.csv
+/src/DevTreksStatsApi/wwwroot/resources/temp/e094cdd6-720a-4658-9e2c-60d0ad6908c3/R1Web.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/870d1485-6442-4e5e-aa96-908140f70baf/Regress1out.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/870d1485-6442-4e5e-aa96-908140f70baf/Regress1.csv
+/src/DevTreksStatsApi/wwwroot/resources/temp/870d1485-6442-4e5e-aa96-908140f70baf/R1Web.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/787daa16-bea5-4148-9049-7b065b953865/Regress1out.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/787daa16-bea5-4148-9049-7b065b953865/Regress1.csv
+/src/DevTreksStatsApi/wwwroot/resources/temp/787daa16-bea5-4148-9049-7b065b953865/R1Web.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/21044519-63c6-43c8-b694-3aba0f29ef30/Regress1out.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/21044519-63c6-43c8-b694-3aba0f29ef30/Regress1.csv
+/src/DevTreksStatsApi/wwwroot/resources/temp/21044519-63c6-43c8-b694-3aba0f29ef30/PyOLSWeb1.txt
