2016sept24: debug session

--- a/.gitignore
+++ b/.gitignore
@@ -252,3 +252,14 @@ ModelManifest.xml
 /src/DevTreksStatsApi/wwwroot/resources/temp/21044519-63c6-43c8-b694-3aba0f29ef30/Regress1out.txt
 /src/DevTreksStatsApi/wwwroot/resources/temp/21044519-63c6-43c8-b694-3aba0f29ef30/Regress1.csv
 /src/DevTreksStatsApi/wwwroot/resources/temp/21044519-63c6-43c8-b694-3aba0f29ef30/PyOLSWeb1.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/34d13bb0-9868-4b4a-8ac5-daa9591fa8e3/R1Web.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/34d13bb0-9868-4b4a-8ac5-daa9591fa8e3/Regress1out.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/4c9d9854-c8c4-49a1-9a34-9bc5e5b70eab/R1Web.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/84914ccb-f8ab-404f-ab95-1a5e1ccc3bff/Regress1out.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/84914ccb-f8ab-404f-ab95-1a5e1ccc3bff/Regress1.csv
+/src/DevTreksStatsApi/wwwroot/resources/temp/84914ccb-f8ab-404f-ab95-1a5e1ccc3bff/R1Web.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/6b293e5e-e875-4d6f-81b3-ca43f1ee9254/Regress1out.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/6b293e5e-e875-4d6f-81b3-ca43f1ee9254/Regress1.csv
+/src/DevTreksStatsApi/wwwroot/resources/temp/6b293e5e-e875-4d6f-81b3-ca43f1ee9254/R1Web.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/4c9d9854-c8c4-49a1-9a34-9bc5e5b70eab/Regress1out.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/4c9d9854-c8c4-49a1-9a34-9bc5e5b70eab/Regress1.csv
