2016sept25a: First successful run from the DevTreks client.

--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,11 @@ ModelManifest.xml
 /src/DevTreksStatsApi/wwwroot/resources/temp/6b293e5e-e875-4d6f-81b3-ca43f1ee9254/R1Web.txt
 /src/DevTreksStatsApi/wwwroot/resources/temp/4c9d9854-c8c4-49a1-9a34-9bc5e5b70eab/Regress1out.txt
 /src/DevTreksStatsApi/wwwroot/resources/temp/4c9d9854-c8c4-49a1-9a34-9bc5e5b70eab/Regress1.csv
+/src/DevTreksStatsApi/wwwroot/resources/temp/0369ce96-7d7c-40a5-a882-b4afdfa829eb/PyOLSWeb1.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/0369ce96-7d7c-40a5-a882-b4afdfa829eb/Regress1out.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/4ddff0d8-6e66-4cc9-beb0-17f57f866c51/Regress1out.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/7126d1f1-ea6d-416b-898a-6293af846ee2/PyOLSWeb1.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/7126d1f1-ea6d-416b-898a-6293af846ee2/Regress1.csv
+/src/DevTreksStatsApi/wwwroot/resources/temp/7126d1f1-ea6d-416b-898a-6293af846ee2/Regress1out.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/4ddff0d8-6e66-4cc9-beb0-17f57f866c51/Regress1.csv
+/src/DevTreksStatsApi/wwwroot/resources/temp/4ddff0d8-6e66-4cc9-beb0-17f57f866c51/PyOLSWeb1.txt
