--- a/.gitignore
+++ b/.gitignore
@@ -271,3 +271,6 @@ ModelManifest.xml
 /src/DevTreksStatsApi/wwwroot/resources/temp/7126d1f1-ea6d-416b-898a-6293af846ee2/Regress1out.txt
 /src/DevTreksStatsApi/wwwroot/resources/temp/4ddff0d8-6e66-4cc9-beb0-17f57f866c51/Regress1.csv
 /src/DevTreksStatsApi/wwwroot/resources/temp/4ddff0d8-6e66-4cc9-beb0-17f57f866c51/PyOLSWeb1.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/5c28e162-d33d-44ff-b4a0-13c6593a0bf8/PyOLSWeb1.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/6ada3546-a8e2-4e2b-99c7-68bfe8a57ad0/PyOLSWeb1.txt
+/src/DevTreksStatsApi/wwwroot/resources/temp/5c28e162-d33d-44ff-b4a0-13c6593a0bf8/Regress1out.txt
