--- a/src/DevTreksStatsApi/appsettings.json
+++ b/src/DevTreksStatsApi/appsettings.json
@@ -7,12 +7,23 @@
       "Microsoft": "Information"
     }
   },
-  "Debug": {
-    "DefaultRootWebStoragePath": "http://localhost:52958/"
+  "DebugPaths": {
+    "DefaultRootWebStoragePath": "http://localhost:52958/",
+    "DefaultWebDomain": "http://localhost:52958/"
   },
-  "Release": {
-    "DefaultRootWebStoragePath": "http://localhost:5000/"
+  "ReleasePaths": {
+    "DefaultRootWebStoragePath": "http://localhost:5000/",
+    "DefaultWebDomain": "http://localhost:5000/"
   },
+  //azure releases use these nodes
+  //"DebugPaths": {
+  //  "DefaultRootWebStoragePath": "http://127.0.0.1:10000/devstoreaccount1/",
+  //  "DefaultWebDomain": "http://localhost:52958/"
+  //},
+  //"ReleasePaths": {
+  //  "DefaultRootWebStoragePath": "https://devtreks1.blob.core.windows.net/",
+  //  "DefaultWebDomain": "https://www.devtreks.org/"
+  //},
   "Site": {
     "RExecutable": "C:\\Program Files\\Microsoft\\MRO-3.3.1\\bin\\Rscript.exe",
     "PyExecutable": "C:\\Anaconda3\\pythonw.exe"
