--- a/src/DevTreksStatsApi/appsettings.json
+++ b/src/DevTreksStatsApi/appsettings.json
@@ -17,15 +17,16 @@
   },
   //azure releases use these nodes
   //"DebugPaths": {
-  //  "DefaultRootWebStoragePath": "http://127.0.0.1:10000/devstoreaccount1/",
+  //  "DefaultRootWebStoragePath": "http://localhost:52958/",
   //  "DefaultWebDomain": "http://localhost:52958/"
   //},
   //"ReleasePaths": {
-  //  "DefaultRootWebStoragePath": "https://devtreks1.blob.core.windows.net/",
-  //  "DefaultWebDomain": "https://www.devtreks.org/"
+  //for remote host testing, stores in host file path to deployed webapi app
+  //  "DefaultRootWebStoragePath": "http://devtreksapi1.southcentralus.cloudapp.azure.com/",
+  //  "DefaultWebDomain": "http://devtreksapi1.southcentralus.cloudapp.azure.com/"
   //},
   "Site": {
-    "RExecutable": "C:\\Program Files\\Microsoft\\MRO-3.3.1\\bin\\Rscript.exe",
-    "PyExecutable": "C:\\Anaconda3\\pythonw.exe"
+   "RExecutable": "C:\\Program Files\\Microsoft\\MRO-3.3.1\\bin\\Rscript.exe",
+   "PyExecutable": "C:\\Anaconda3\\pythonw.exe"
   }
 }
